tests/fixtures/invalid/pow_bool_none_dict.py
# Cannot call pow() with Bool, None, Dict[str, int]
x = pow(True, None, {"a": 1})
